# Neuralis

./: README.md  dev-start.sh  run_server.py  run_server_node2.py
agent-protocol/: pyproject.toml
agent-protocol/neuralis/protocol/: __init__.py  router.py
agent-protocol/tests/: test_module5.py
agent-runtime/: pyproject.toml
agent-runtime/neuralis/agents/: bus.py  inference.py
agent-runtime/tests/: test_module4.py
canvas-api/: pyproject.toml
canvas-api/neuralis/api/: __init__.py  routes.py
canvas-api/tests/: test_module6.py
canvas-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
canvas-ui/src/: App.jsx  index.css  styles.css
canvas-ui/src/components/: AgentPanel.jsx  Canvas.jsx  ChatPanel.jsx  ContentPanel.jsx  DetailPanel.jsx  EventLog.jsx  FilesPanel.jsx  LoadingScreen.jsx  MeshCanvas.jsx  NodePanel.jsx  PeerPanel.jsx  PeersPanel.jsx  SettingsPanel.jsx  Sidebar.jsx  StatusBar.jsx  TopBar.jsx
canvas-ui/src/hooks/: useNeuralis.js  useNodeState.js  useWebSocket.js
canvas-ui/src/lib/: api.js  utils.js
crypto-layer/: pyproject.toml
crypto-layer/neuralis/crypto/: __init__.py  envelope.py  exchange.py  keystore.py  signing.py  tokens.py
crypto-layer/tests/: conftest.py  test_module8.py
docs/: CONTRIBUTOR_GUIDE.md  DEPIN_ECONOMICS.md  FULL_TECHNICAL_SPEC.md  LAST_CHAT_WITH_YOU.md  MODULE_8_SECURITY_AUDIT.md  NEURALIS-OVERVIEW.md
ipfs-store/neuralis/store/: __init__.py  blockstore.py  cid.py  ipfs_store.py  pins.py
ipfs-store/tests/: test_module3.py
mesh-transport/: pyproject.toml
mesh-transport/tests/: test_module2.py
neuralis-node/: pyproject.toml
neuralis-node/neuralis/: cli.py  config.py  identity.py  node.py
neuralis-node/neuralis/agents/: __init__.py  base.py  loader.py  runtime.py
neuralis-node/neuralis/api/: app.py  models.py
neuralis-node/neuralis/mesh/: discovery.py  host.py  peers.py  transport.py
neuralis-node/neuralis/protocol/: codec.py  messages.py
neuralis-node/tests/: test_module1.py  test_module2.py
