[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neuralis-canvas-api"
version = "0.1.0"
description = "Neuralis Module 6 — Canvas API (FastAPI bridge)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",   # for testing with AsyncClient
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neuralis*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.package-dir]
"" = "."
